--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,15 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".PopupCollectionActivity"></activity>
+        <activity android:name=".RegisterActivity"></activity>
+        <activity android:name=".LoginActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".PopupCollectionActivity" />
         <activity android:name=".CollectionInfoAcivity" />
         <activity android:name=".CollectionActivity" /> <!-- <activity android:name=".BackgroundActivity" /> -->
         <activity
@@ -39,21 +47,14 @@
                 android:enabled="true"
                 android:exported="true" />
 
-        <activity android:name=".ChatMain"/>
-        <activity android:name=".ChatLogin"/>
-        <activity android:name=".ChatActivity"/>
-
+        <activity android:name=".ChatMain" />
+        <activity android:name=".ChatLogin" />
+        <activity android:name=".ChatActivity" />
         <activity android:name=".ScreenOffExActivity" />
         <activity android:name=".PrefFragmentActivity" />
         <activity android:name=".PrefExActivity" />
         <activity android:name=".FileExActivity" />
-        <activity android:name=".MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity android:name=".MainActivity"></activity>
 
         <receiver
                 android:name=".BootCompleteReceiver"
