--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,9 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".PopupCollectionActivity"></activity>
+        <activity
+                android:name=".PopupCollectionActivity"
+                android:theme="@style/popupTheme"/>
         <activity android:name=".CollectionInfoAcivity" />
         <activity android:name=".CollectionActivity" /> <!-- <activity android:name=".BackgroundActivity" /> -->
         <activity
