채팅 수정, 디비 고침

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,11 @@
                 android:name=".PopupCollectionActivity"
                 android:theme="@style/popupTheme"/>
         <activity android:name=".LoginActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity android:name=".RegisterActivity"></activity>
         <activity android:name=".CollectionInfoAcivity" />
@@ -50,11 +54,11 @@
         <activity android:name=".PrefExActivity" />
         <activity android:name=".FileExActivity" />
         <activity android:name=".MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+        </activity>
+
+        <activity android:name=".ChatActivity">
+
         </activity>
 
         <receiver
