--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,18 +16,21 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme">
-        <activity
-                android:name=".PopupCollectionActivity"
-                android:theme="@style/popupTheme"/>
-        <activity android:name=".LoginActivity">
+            android:theme="@style/AppTheme"
+            android:usesCleartextTraffic="true">
+        <activity android:name=".TestActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".RegisterActivity"></activity>
+        <activity
+                android:name=".PopupCollectionActivity"
+                android:theme="@style/popupTheme" />
+        <activity android:name=".LoginActivity">
+        </activity>
+        <activity android:name=".RegisterActivity" />
         <activity android:name=".CollectionInfoAcivity" />
         <activity android:name=".CollectionActivity" /> <!-- <activity android:name=".BackgroundActivity" /> -->
         <activity
@@ -53,13 +56,8 @@
         <activity android:name=".PrefFragmentActivity" />
         <activity android:name=".PrefExActivity" />
         <activity android:name=".FileExActivity" />
-        <activity android:name=".MainActivity">
-
-        </activity>
-
-        <activity android:name=".ChatActivity">
-
-        </activity>
+        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".ChatActivity"></activity>
 
         <receiver
                 android:name=".BootCompleteReceiver"
