--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,11 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.google.android.material:material:1.1.0'
 
+    // Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.4.0'
+
     implementation 'com.google.firebase:firebase-database:19.3.0'
     implementation 'com.facebook.android:facebook-android-sdk:4.42.0'
     implementation 'com.google.firebase:firebase-auth:19.3.1'
