--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
         <activity android:name=".ChatActivity"></activity>
+        <activity android:name=".ChattingActivity"></activity>
         <activity android:name=".ChatRoomActivity">
 
         </activity>
